--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,14 @@
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
 	    <version>3.5</version>
-	</dependency>	
+	</dependency>
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.12</version>
+	    <scope>test</scope>
+	</dependency>
+	
   </dependencies>
   
   <build>
