--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,17 @@
 	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
-	
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.7.25</version>
+	</dependency>
+	<dependency> 
+		<groupId>ch.qos.logback</groupId>
+		<artifactId>logback-classic</artifactId>
+		<version>1.0.13</version>
+		<scope>test</scope>
+	</dependency>
   </dependencies>
   
   <build>
