--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
   </properties>
   
   <dependencies>
+    <dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<version>1.18.0</version>
+    </dependency>
   	<dependency>
 	    <groupId>com.google.guava</groupId>
 	    <artifactId>guava</artifactId>
@@ -57,7 +62,6 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<configuration>
 				<source>1.8</source>
-				<version>1.8</version>
 				<target>1.8</target>
 			</configuration>
  		</plugin>
